UCSFD8-710  bug with detecting overlap because of width 0

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -9861,6 +9861,7 @@ a[href*="http"] .article-header__date {
       position: -webkit-sticky;
       position: sticky;
       height: 20rem;
+      width: auto;
       top: 80px; } }
   @media (min-width: 1280px) {
     .article-meta-share {
