--- a/docroot/themes/custom/ucsf/scss/components/_share.scss
+++ b/docroot/themes/custom/ucsf/scss/components/_share.scss
@@ -80,6 +80,7 @@
     grid-row: 2;
     position: sticky;
     height: 20rem;
+    width: auto;
     top: $space-ten;
   }
 
